# jeeves-ai

./: Cargo.toml  justfile
src/: main.rs
