[package]
name = "jeeves-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
ollama-rs = { version = "0.1.3", features = ["stream"] }
owo-colors = "3.5.0"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = "0.1.14"


# optimize for size
[profile.release]
strip = "symbols"
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
